--- a/webapp/app/templates/issuer.html
+++ b/webapp/app/templates/issuer.html
@@ -45,19 +45,19 @@
         <section class="w3-padding-large">
             <!-- Row 1: Labels -->
             <div class="w3-row">
-                <section class="w3-col s3"
+                <div class="w3-col s3"
                     <!-- Top Left -->
                     <p>Token Details</p>
-                </section>
-                <section class="w3-col s9">
+                </div>
+                <div class="w3-col s9">
                 
                     <!-- Top Right -->
                     <p>Price Graph</p>
-                </section>
+                </div>
             </div>
             <!-- Row 2: Content -->
             <div class="w3-row">
-                <section class="w3-col s3 w3-padding-large w3-border">
+                <div class="w3-col s3 w3-padding-large w3-border">
                     {% if current_user.token %}
                         <p>{{ current_user.token.name }}</p>
                         <p>{{ current_user.token.symbol }}</p>
@@ -66,10 +66,10 @@
                     {% if not current_user.token %}
     
                     {% endif %}
-                </section>
-                <section class="w3-col s9 w3-orange w3-padding-large">
+                </div>
+                <div class="w3-col s9 w3-border w3-padding-large">
                     <p>Price Graph Details </p>
-                </section>
+                </div>
             </div>
             
             
@@ -89,11 +89,11 @@
             
             <!-- Row 4: Content -->
             <div class="w3-row">
-                <div class="w3-col s6 w3-purple w3-padding-large">
-                    <p>Sweet ass pie graph</p>
+                <div class="w3-col s6 w3-border w3-padding-large">
+                    <p>Pie Graph</p>
                 </div>
-                <div class="w3-col s6 w3-green w3-padding-large">
-                    <p>Sick ass pricing details and pressure</p>
+                <div class="w3-col s6 w3-border w3-padding-large">
+                    <p>Pricing details and pressure</p>
                 </div>
             </div>
             
